--- a/VLaboralWeb/App/Home/Partials/homeInfo.html
+++ b/VLaboralWeb/App/Home/Partials/homeInfo.html
@@ -83,7 +83,7 @@
     <div class="footer_h">
         <div class="contenido">
             <p>Derechos reservados 2017 Toroide Laboral</p>
-
+            <p>Contacto: toroidelaboral@hotmail.com</p>
         </div>
 
     </div>
