--- a/VLaboralWeb/App/Postulantes/Partials/postulanteDetalle.html
+++ b/VLaboralWeb/App/Postulantes/Partials/postulanteDetalle.html
@@ -1,4 +1,4 @@
-﻿<md-dialog layout="column" flex="70" layout-padding>
+﻿<md-dialog layout="row" flex="70" layout-padding>
     <md-dialog-content>
         <div layout="row">
             <div layout="column" flex="50">
