--- a/VLaboralWeb/App/Profesionales/Partials/profesionalPerfilPublico.html
+++ b/VLaboralWeb/App/Profesionales/Partials/profesionalPerfilPublico.html
@@ -14,7 +14,7 @@
                             </div>
                         </md-card-title-media>
                         <md-card-title-text>
-                            <div layout="row" layout-padding flex>
+                            <div layout="row" layout-padding>
                                 <div flex class="ic_p">
                                     <h3>Apellido y Nombre</h3>
                                     <br />
@@ -24,7 +24,7 @@
                                     <br />
                                     <!--<input ng-model="profesional.Nombre" class="inp" readonly>-->
                                 </div>
-                                <div layout="column" layout-align="start end" flex="50">
+                                <div layout="column" layout-align="start end">
 
                                     <h3>Valoración</h3>
                                     <jk-rating-stars read-only="true" rating="valoracion" disabled></jk-rating-stars>
